--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -28,3 +28,10 @@
 .ltx_page_main {
   padding:min(1em,1.5%) min(3em,4.5%) min(1em,1.5%) min(2em, 3%);
 }
+
+/* prevent invisible assistive MathML from enlarging the container */
+mjx-assistive-mml {
+  right: 0 !important;
+  bottom: 0 !important;
+  clip-path: polygon(0 0, 0 1px, 1px 0);
+}
