--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -29,6 +29,15 @@
   padding:min(1em,1.5%) min(3em,4.5%) min(1em,1.5%) min(2em, 3%);
 }
 
+/* Fix run-in followed by several paragraphs (backported from 0.8.8) */
+.ltx_runin + .ltx_para p,
+.ltx_runin + p {
+  display:block;
+  &:first-child {
+    display:inline;
+  }
+}
+
 /* prevent invisible assistive MathML from enlarging the container */
 mjx-assistive-mml {
   right: 0 !important;
