--- a/docs/bookml/CSS/style.plain.css
+++ b/docs/bookml/CSS/style.plain.css
@@ -21,4 +21,7 @@
 .ltx_page_main {
   max-width: 100ex;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+}
+
+/*# sourceMappingURL=style.plain.css.map */
