--- a/CSS/style.gitbook,plain.scss
+++ b/CSS/style.gitbook,plain.scss
@@ -105,7 +105,7 @@ th > .ltx_p:last-child {
 /* Use flex for non-aligned equations */
 .ltx_equation.ltx_eqn_div {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   width: 100%;
   &>span:not(.ltx_tag) {
     flex: 1;
